# sl_attendance_project.api

./: .env  .flaskenv  .pytest.ini  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml
migrations/versions/: 4d4c58828e0d_database.py  58d88728dcd5_initial_state.py
rag_llm_model/: main.py  train.py
rag_llm_model/config/: __init__.py  env_client.py  path_manager.py  pinecone_.py
rag_llm_model/data/: data.json
rag_llm_model/embedding/: __init__.py  generate_embbeding.py  text_segmentation.py
rag_llm_model/groq_custom/: __init__.py  groq_api_connect.py
src/: __init__.py  auth.py  bookmarks.py  database.py  db.py  employee.py  main.py  wsgi.py
src/constants/: http_status_codes.py
src/database/: db.py
src/docs/employee/: me.yml  register.yml
src/models/: attedance.py  employee.py  leave_request.py
src/restx/: __init__.py
src/schemas/: create.py
src/schemas/auth/: login.py  refresh.py
src/schemas/employee/: register.py
src/static/: http.status.code.py  http_status_code.py
tests/: conftest.py  test_employee.py
