[tool.poetry]
    name = "flask-api"
    version = "0.1.0"
    description = ""

[tool.poetry.dependencies]
    python = ">=3.10, <4.0"
    flask = ">=3.1.0,<4.0.0"
    flask-sqlalchemy = ">=3.1.1,<4.0.0"
    flask-marshmallow = ">=1.3.0,<2.0.0"
    marshmallow = ">=3.26.1,<4.0.0"
    psycopg2-binary = ">=2.9.10,<3.0.0"
    marshmallow-sqlalchemy = ">=1.4.1,<2.0.0"
    python-dotenv = "^1.0.1"
    flask-bcrypt = "^1.0.1"
    flask-migrate = "^4.1.0"
    mypy = "^1.15.0"
    pyJwt="2.9.0"
    flask-jwt-extended = "^4.7.1"
    flask-smorest = "^0.45.0"
    pytest-flask = "^1.3.0"

[build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"